Fix wrapping on row

--- a/src/module/catalog/src/datasets/components/DistributionList/index.scss
+++ b/src/module/catalog/src/datasets/components/DistributionList/index.scss
@@ -9,7 +9,6 @@
         min-height: 50px;
         background-color: white;
         display: flex;
-        flex-wrap: wrap;
         box-shadow: 0px 3px 6px -1px rgba(0, 0, 0, 0.3);
 
         &:focus {
@@ -61,9 +60,11 @@
         font-size: $text-size;
         margin-right: 10px;
         align-self: center;
+        min-width: 60px;
     }
     .distribution__title{
         font-weight: bold;
+        word-break: normal;
     }
 
 @media (max-width:1024px){
